2012-01-22  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/socket.c (__socket): Return EAFNOSUPPORT instead
	of the non-standard EPFNOSUPPORT.

2012-01-21  Ulrich Drepper  <drepper@gmail.com>

	* wcsmbs/uchar.h: Test __STDC_VERSION__.

2012-01-20  Ulrich Drepper  <drepper@gmail.com>

	* nscd/aicache.c (addhstaiX): Do not cache negative results of
	transient errors.
	* nscd/grpcache.c (cache_addgr): Likewise.
	* nscd/hstcache.c (cache_addhst): Likewise.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nscd/pwdcache.c (cache_addpw): Likewise.
	* nscd/servicescache.c (cache_addserv): Likewise.

2012-01-16  Ulrich Drepper  <drepper@gmail.com>

	* malloc/malloc.c: Various cleanups.
	* malloc/hooks.c: Likewise.

	* stdlib/Makefile (tests): Add bug-fmtmsg1.
	* stdlib/bug-fmtmsg1.c: New file.

	* stdlib/fmtmsg.c (init): Add missing unlock.
	Patch by Peng Haitao <penght@cn.fujitsu.com>.

2012-01-12  Marek Polacek  <polacek@redhat.com>

	* libio/bits/stdio2.h: Do not define gets for ISO C11, ISO C++11,
	and _GNU_SOURCE.

2012-01-04  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* powerpc/powerpc32/sysdep.h: Add GLUE and GENERATE_GOT_LABEL macros.
	* unix/sysv/linux/powerpc/powerpc32/getcontext-common.S: Call
	macro to ensure uniqueness of label name.
	* unix/sysv/linux/powerpc/powerpc32/setcontext-common.S: Likewise.
	* unix/sysv/linux/powerpc/powerpc32/swapcontext-common.S: Likewise.

2012-01-11  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/e_acosh.c: New file.

	* sysdeps/ieee754/dbl-64/s_scalbln.c: Add branch prediction.
	* sysdeps/ieee754/flt-32/s_scalblnf.c: Likewise.
	* sysdeps/ieee754/ldbl-96/s_scalblnl.c: Likewise.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_scalbln.c: New file.

2012-01-10  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_modf.c: New file.

	* sysdeps/ieee754/dbl-64/s_modf.c: Add branch prediction.
	* sysdeps/ieee754/flt-32/s_modff.c: Likewise.